core-bc/modules/theme/src/main/webapp/css/custom.css
/* ... */
.vap-search-wrap form {
}

.search-box-left,
.search-box-right,
.search-box-center {
	background: url(../images/vap/search-box-sprite.png) 0 0 no-repeat;
}

.search-box-left {
	background-position: 0 0;
	padding-left: 60px;
}

.search-box-right {
	background-position: 100% -400px;
	padding-right: 60px;
}

.search-box-center {
	background-position: 0 -200px;
	background-repeat: repeat-x;
	padding: 20px 0;
	height: 62px;
}

.vap-search-wrap .search-input-wrap {
	background: #e2edf4 url(../images/vap/vap-search-bg.png) 0 0 repeat-x;
	padding: 10px;
}

/* Clearfix style clearing */
.search-input-wrap:after{clear:both;content:'.';display:block;visibility:hidden;height:0}
.search-input-wrap{display:inline-block}
* html .search-input-wrap{height:1%}
.search-input-wrap{display:block}


.vap-search-wrap .link-elibrary-wrap {
	margin: 0 0 5px 0;
	text-align: right;
}

.vap-search-wrap .link-elibrary-wrap a {
	font-family: Ubuntu, Arial, Verdana, Helvetica, sans-serif;
	font-size: 14px;
	text-decoration: none;
}

.vap-search-wrap .link-elibrary-wrap a:hover {
	text-decoration: underline;
}

.vap-search-input,
.vap-search-button {
	display: block;
}

.vap-search-input {
	
	margin-right: 85px;
}

.vap-search-input > .aui-field-content {
	background: #fff;
	border: 1px solid #c4ced5;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	position: relative;
	width: 99%;	
}

.vap-search-input > .aui-field-content > .aui-field-element {
	display: block;
	padding: 4px;
	overflow: hidden;
}

.vap-search-button {
	float: right;
	position: relative;
	width: 80px;
}

.vap-search-input .aui-combobox-content .aui-field-content {
	display: block;
}

.vap-search-input .aui-toolbar {
	display: none;
}

.vap-search-wrap input[type="text"],
.vap-search-wrap input[type="submit"] {
	font-family: Ubuntu, Arial, Verdana, Helvetica, sans-serif;
	position: relative;
}

.vap-search-wrap input[type="text"] {
	background: #fff url(../images/vap/search-icon.png) 4px 2px no-repeat;
	border: none;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-khtml-box-sizing: border-box;
	box-sizing: border-box;	
	display: block;
	font-size: 16px;
	padding: 6px;
	padding-left: 41px;
	width: 100%;
}

.ie6 .vap-search-wrap input[type="text"],
.ie7 .vap-search-wrap input[type="text"] {
	/* Fixes issue with box overflow when setting width 100% and padding, borders, margin etc for ie6 and ie7 */
	behavior: url(/regionportalen-theme-2/htc/boxsizing.htc);
	padding-top: 8px;
	padding-bottom: 8px;
}

.vap-search-wrap input[type="submit"] {
	background: #2865ad url(../images/buttons/button-bg-normal.png) 0 0 repeat-x;
	border: 1px solid #2f71a8;
	border-color: #2f71a8 #052a73 #052a73 #2f71a8;  
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	color: #fff;
	display: block;
	float: right;
	font-size: 16px;
	font-weight: normal;
	padding: 10px 15px;
	position: relative;
	text-align: center;
	text-shadow: none;
}

/*- Auto Complete -*/

.aui-autocomplete-results-content {
	/*behavior: url(/vgr-alfa-theme/htc/css3pie.htc);*/
	-moz-border-radius: 0 0 3px 3px;
	-webkit-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;	
	border: 1px solid #e4edf9;
	-moz-box-shadow: 1px 1px 4px #777;
	-webkit-box-shadow: 1px 1px 4px #777;
	box-shadow: 1px 1px 4px #777;
	min-height: 40px;
	height: 100%;
	overflow-y: auto;
	position: relative;
}




.aui-autocomplete-list-item {
	border: 1px solid #fff;
	font-size: 16px;
	list-style: none;
	margin: 0;
	padding: 3px 3px;
}

.aui-autocomplete-selected {
	background: #e4edf9;
	border-color: #005095;
}

/* ----------------- VAP Search Results Portlet ----------------------- */

/*- Search Results -*/

.vap-search-results-summary {
	background: #fff;
	border: 1px solid #cad5de;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	-moz-box-shadow: 0px 1px 4px 0px #cccccc;
	-webkit-box-shadow: 0px 1px 4px 0px #cccccc;
	box-shadow: 0px 1px 4px 0px #cccccc;	
	/*behavior: url(/vgr-alfa-theme/htc/css3pie.htc);*/
	color: #333;
	font-size: 1.5em;
	margin: 10px 0 30px 0;
	padding: 12px;
	position: relative;	
}

.vap-search-results-summary::before {
	content: "";
	position: absolute;
	bottom: -20px;
	left: 40px;
	border-width: 20px 20px 0;
	border-style: solid;
	border-color: #cad5de transparent;
	display: block;
	width: 0;
}

.vap-search-results-summary::after {
	content: "";
	position: absolute;
	bottom: -16px;
	left: 40px;
	border-width: 20px 20px 0;
	border-style: solid;
	border-color: #fff transparent;
	display: block;
	width: 0;
}

.vap-search-results-summary .search-word {
	font-style: italic;
}

.paginator-wrap .search-info {
	text-align: center;
}

/*-- VAP Flag --*/

.vap-flag {
	background: transparent url(../images/aui/rating.png) 0 0 no-repeat;
	display: block;
	font-size: 0;
	height: 16px;
	position: absolute;
	right: 10px;
	text-decoration: none;
	text-indent: -9999em;
	width: 16px;
}

.vap-flag:hover {
	background-position-y: -16px;
	text-decoration: none;
}

.vap-flag-active {
	background-position-y: -32px;
}

/* ----------------- VAP User Flags Portlet ----------------------- */

.vap-flag-remove {
	background: transparent url(../images/common/close.png) 0 0 no-repeat;
	display: block;
	font-size: 0;
	height: 16px;
	position: absolute;
	right: 10px;
	text-decoration: none;
	text-indent: -9999em;
	width: 16px;	
}


/* ----------------- VAP Search Facet Portlet ----------------------- */

.vap-facet-search-wrap {
	background: #fff;
	border: 1px solid #cad5de;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	-moz-box-shadow: 0px 1px 4px 0px #cccccc;
	-webkit-box-shadow: 0px 1px 4px 0px #cccccc;
	box-shadow: 0px 1px 4px 0px #cccccc;	
	/*behavior: url(/vgr-alfa-theme/htc/css3pie.htc);*/
	margin: 10px 0;
	padding: 12px;
	position: relative;	
}

.vap-facet-search-wrap-empty {
	display: none;
}

.vap-facet-search-wrap h2 {
	color: #333;
	font-size: 1.4em;
	margin: 0 0 0.4em 0;
}
/* ... */

